--- a/TeduShop.Data/TeduShop.Data.csproj
+++ b/TeduShop.Data/TeduShop.Data.csproj
@@ -60,6 +60,10 @@
     <Compile Include="Migrations\201703191501193_InitialDB.Designer.cs">
       <DependentUpon>201703191501193_InitialDB.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201703211631552_fix_bug.cs" />
+    <Compile Include="Migrations\201703211631552_fix_bug.Designer.cs">
+      <DependentUpon>201703211631552_fix_bug.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\FooterRepository.cs" />
@@ -88,6 +92,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201703191501193_InitialDB.resx">
       <DependentUpon>201703191501193_InitialDB.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201703211631552_fix_bug.resx">
+      <DependentUpon>201703211631552_fix_bug.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
