--- a/TeduShop.Data/TeduShop.Data.csproj
+++ b/TeduShop.Data/TeduShop.Data.csproj
@@ -38,6 +38,14 @@
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Microsoft.AspNet.Identity.Core, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Identity.Core.2.2.1\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.AspNet.Identity.EntityFramework, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Identity.EntityFramework.2.2.1\lib\net45\Microsoft.AspNet.Identity.EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -67,6 +75,14 @@
     <Compile Include="Migrations\201703221417031_AddErrorTable.cs" />
     <Compile Include="Migrations\201703221417031_AddErrorTable.Designer.cs">
       <DependentUpon>201703221417031_AddErrorTable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201703241641507_Integrate-AspnetIdentity.cs" />
+    <Compile Include="Migrations\201703241641507_Integrate-AspnetIdentity.Designer.cs">
+      <DependentUpon>201703241641507_Integrate-AspnetIdentity.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201703241707502_Changekey.cs" />
+    <Compile Include="Migrations\201703241707502_Changekey.Designer.cs">
+      <DependentUpon>201703241707502_Changekey.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -103,6 +119,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201703221417031_AddErrorTable.resx">
       <DependentUpon>201703221417031_AddErrorTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201703241641507_Integrate-AspnetIdentity.resx">
+      <DependentUpon>201703241641507_Integrate-AspnetIdentity.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201703241707502_Changekey.resx">
+      <DependentUpon>201703241707502_Changekey.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
